fixed winner list being too big

--- a/Quizzardry/Quizzardry/Sass/Partials/_base.scss
+++ b/Quizzardry/Quizzardry/Sass/Partials/_base.scss
@@ -49,6 +49,12 @@ h1 {
     height: auto;
 }
 
+#winnerList {
+    overflow-y: auto;
+    height: 35vh;
+    padding: 0;
+}
+
 @media (max-width: 720px) {
     main {
         width: 100%;
