--- a/Quizzardry/Quizzardry/wwwroot/css/style.css
+++ b/Quizzardry/Quizzardry/wwwroot/css/style.css
@@ -39,6 +39,11 @@ h1 {
 .messageInterface {
   height: auto; }
 
+#winnerList {
+  overflow-y: auto;
+  height: 35vh;
+  padding: 0; }
+
 @media (max-width: 720px) {
   main {
     width: 100%; } }
